# agent-engineering-toolkit

./: .gitignore  AGENTS.md  AGENTS.overlay.md  CHANGELOG.md  CHECKLIST.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO_APPLY.md  HOW_TO_USE.md  INDEX_CANONICAL.md  INDEX_COMPANION.md  INDEX_PROMPTS.md  Makefile  ONBOARDING_FULL.md  ONBOARDING_MINIMAL.md  PATCH_NOTES.md  PHASE_21_FINAL_POLISH.md  README.md  README_INTERNAL_START_HERE.md  README_START_HERE.md  README_TH.md  SECURITY.md  SKILLS_INDEX.md  START_HERE.md  TREE.txt  VALIDATION.md  cli.ts  package-lock.json  package.json
tools/skillgen/: README.md  pyproject.toml
tools/skillgen/src/skillgen/: __init__.py  cli.py
tools/skillgen/templates/: skill.md.template
tools/toolkit-arch/: AGENTS.md  README.md  pyproject.toml
tools/toolkit-arch/docs/: cli_contract.md  how_to_use.md
tools/toolkit-arch/prompts/: use_toolkit_arch.md
tools/toolkit-arch/skills/toolkit-arch-operator/: SKILL.md
tools/toolkit-arch/src/toolkit_arch/: cli.py  utils.py
tools/toolkit-arch/src/toolkit_arch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/toolkit-ci/: AGENTS.md  README.md  pyproject.toml
tools/toolkit-ci/docs/: how_to_use.md
tools/toolkit-ci/prompts/: use_toolkit_ci.md
tools/toolkit-ci/skills/toolkit-ci-operator/: SKILL.md
tools/toolkit-ci/src/toolkit_ci/: cli.py  utils.py
tools/toolkit-ci/src/toolkit_ci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/toolkit-design/: AGENTS.md  README.md  pyproject.toml
tools/toolkit-design/artifacts/: arch-report.json
tools/toolkit-design/docs/: how_to_use.md
tools/toolkit-design/examples/: design-tokens.sample.json
tools/toolkit-design/prompts/: use_toolkit_design.md
tools/toolkit-design/skills/toolkit-design-operator/: SKILL.md
tools/toolkit-design/src/toolkit_design.egg-info/: PKG-INFO  (+3 more)
(+1803 files in other folders)
