[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillgen"
version = "0.1.0"
description = "Skill generation, validation, and sync CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
skillgen = "skillgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
