[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-arch"
version = "0.1.0"
description = "Clean Architecture validation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
toolkit-arch = "toolkit_arch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
