[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-ci"
version = "0.1.0"
description = "CI investigation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
toolkit-ci = "toolkit_ci.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
