[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-design"
version = "0.1.0"
description = "Design token sync CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
toolkit-design = "toolkit_design.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
